// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a branch modal snapshot 1`] = `
<box
  alignItems="center"
  backgroundColor="#00000096"
  bottom={0}
  justifyContent="center"
  left={0}
  position="absolute"
  right={0}
  top={0}
  zIndex={20}
>
  <box
    backgroundColor="#0c1823"
    flexDirection="column"
    gap={1}
    maxWidth={108}
    padding={1}
    width="92%"
  >
    <box
      flexDirection="column"
      width="100%"
    >
      <box
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#9cdcfe"
          wrapMode="none"
        >
          List
        </text>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             tab 
          </span>
          <span>
             switch view  
          </span>
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             left / right 
          </span>
          <span>
             panes  
          </span>
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             f 
          </span>
          <span>
             filters  
          </span>
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             esc 
          </span>
          <span>
             close
          </span>
        </text>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        Browse working tree changes, branches, and open pull requests.
      </text>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#29475c"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <box
        flexDirection="row"
        gap={2}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            fg="#d4a72c"
          >
            base
          </span>
          <span
            fg="#8ea4b5"
          >
             ← 
          </span>
          <span
            fg="#e6edf3"
          >
            origin/main
          </span>
          <span
            fg="#29475c"
          >
              │  
          </span>
          <span
            fg="#9cdcfe"
          >
            head
          </span>
          <span
            fg="#8ea4b5"
          >
             → 
          </span>
          <span
            fg="#e6edf3"
          >
            feature/tui
          </span>
        </text>
        <box
          flexDirection="row"
          gap={1}
        >
          <text
            wrapMode="none"
          >
            <span
              bg="#9cdcfe"
              fg="#0b1b26"
            >
               Branches 
            </span>
          </text>
          <text
            wrapMode="none"
          >
            <span
              bg="#152838"
              fg="#8ea4b5"
            >
               Commits  
            </span>
          </text>
        </box>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span>
          2
        </span>
        <span>
           local
        </span>
        <span
          fg="#29475c"
        >
            │  
        </span>
        <span>
          1
        </span>
        <span>
           open PR
        </span>
        <span
          fg="#29475c"
        >
            │  
        </span>
        <span>
          1
        </span>
        <span>
           remote
        </span>
        <span
          fg="#29475c"
        >
            │  
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           working tree 
        </span>
        <span>
           
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           local 
        </span>
        <span>
           
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           PR 
        </span>
        <span>
           
        </span>
        <span
          bg="#152838"
          fg="#8ea4b5"
        >
           remote 
        </span>
      </text>
    </box>
    <box
      flexDirection="column"
      gap={0}
      width="100%"
    >
      <box
        backgroundColor="#2b332d"
        border={
          [
            "left",
          ]
        }
        borderColor="#d4a72c"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <text
          fg="#e6edf3"
          wrapMode="none"
        >
          Working tree
          <span
            fg="#8ea4b5"
          >
              │  
          </span>
          <span
            fg="#8ea4b5"
          >
            4 files  │  +18/-6
          </span>
        </text>
        <text
          wrapMode="none"
        />
      </box>
      <box
        backgroundColor="#1b4535"
        border={
          [
            "left",
          ]
        }
        borderColor="#67b7e1"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <text
          fg="#e6edf3"
          wrapMode="none"
        >
          <span
            fg="#3fb950"
          >
            Build TUI reviewer
          </span>
          <span
            fg="#8ea4b5"
          >
             (#42)
          </span>
          <span
            fg="#8ea4b5"
          >
              │  
          </span>
          <span
            fg="#8ea4b5"
          >
            Madison Bullard, Pierre Bot  │  3 commits vs origin/main  │  +18/-6
          </span>
        </text>
        <text
          wrapMode="none"
        >
          <span>
             
          </span>
          <span
            bg="#3fb950"
            fg="#0b1b26"
          >
             PR #42 
          </span>
        </text>
      </box>
      <box
        backgroundColor="#243a4a"
        border={
          [
            "left",
          ]
        }
        borderColor="#9cdcfe"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <text
          fg="#e6edf3"
          wrapMode="none"
        >
          <span
            fg="#e6edf3"
          >
            feature/tui
          </span>
          <span
            fg="#8ea4b5"
          >
              │  
          </span>
          <span
            fg="#8ea4b5"
          >
            Madison Bullard, Pierre Bot  │  3 commits vs origin/main  │  4 files  │  +18/-6
          </span>
        </text>
        <text
          wrapMode="none"
        >
          <span>
             
          </span>
          <span
            bg="#9cdcfe"
            fg="#0b1b26"
          >
             HEAD    
          </span>
          <span>
             
          </span>
          <span
            bg="#0d2634"
            fg="#e6edf3"
          >
             CURRENT 
          </span>
        </text>
      </box>
      <box
        backgroundColor="#243a4a"
        border={
          [
            "left",
          ]
        }
        borderColor="#9cdcfe"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <text
          fg="#e6edf3"
          wrapMode="none"
        >
          <span
            fg="#e6edf3"
          >
            main
          </span>
          <span
            fg="#8ea4b5"
          >
              │  
          </span>
          <span
            fg="#8ea4b5"
          >
            Madison Bullard  │  0 commits vs origin/main  │  0 files  │  +0/-0
          </span>
        </text>
        <text
          wrapMode="none"
        >
          <span>
             
          </span>
          <span
            bg="#152838"
            fg="#e6edf3"
          >
             DEFAULT 
          </span>
        </text>
      </box>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#67b7e1"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <text
        fg="#e6edf3"
        wrapMode="none"
      >
        Build TUI reviewer (#42)
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        sha abcdef0  │  diff vs origin/main
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           enter 
        </span>
        <span>
           open PR review  
        </span>
        <span
          fg="#29475c"
        >
          │  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           w 
        </span>
        <span>
           working tree  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           o 
        </span>
        <span>
           remote toggle  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           f 
        </span>
        <span>
           filters
        </span>
      </text>
    </box>
  </box>
</box>
`;

exports[`renders a commit view snapshot 1`] = `
<box
  alignItems="center"
  backgroundColor="#00000096"
  bottom={0}
  justifyContent="center"
  left={0}
  position="absolute"
  right={0}
  top={0}
  zIndex={20}
>
  <box
    backgroundColor="#0c1823"
    flexDirection="column"
    gap={1}
    maxWidth={108}
    padding={1}
    width="92%"
  >
    <box
      flexDirection="column"
      width="100%"
    >
      <box
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#9cdcfe"
          wrapMode="none"
        >
          List
        </text>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             tab 
          </span>
          <span>
             switch view  
          </span>
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             left / right 
          </span>
          <span>
             panes  
          </span>
          <span
            bg="#152838"
            fg="#9cdcfe"
          >
             esc 
          </span>
          <span>
             close
          </span>
        </text>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        Browse the comparison commit log and choose base/head commits.
      </text>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#29475c"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <box
        flexDirection="row"
        gap={2}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            fg="#d4a72c"
          >
            base
          </span>
          <span
            fg="#8ea4b5"
          >
             ← 
          </span>
          <span
            fg="#e6edf3"
          >
            origin/main
          </span>
          <span
            fg="#29475c"
          >
              │  
          </span>
          <span
            fg="#9cdcfe"
          >
            head
          </span>
          <span
            fg="#8ea4b5"
          >
             → 
          </span>
          <span
            fg="#e6edf3"
          >
            feature/tui
          </span>
        </text>
        <box
          flexDirection="row"
          gap={1}
        >
          <text
            wrapMode="none"
          >
            <span
              bg="#152838"
              fg="#8ea4b5"
            >
               Branches 
            </span>
          </text>
          <text
            wrapMode="none"
          >
            <span
              bg="#9cdcfe"
              fg="#0b1b26"
            >
               Commits  
            </span>
          </text>
        </box>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        2 commits in the current comparison
      </text>
    </box>
    <box
      flexDirection="column"
      gap={0}
      width="100%"
    >
      <box
        backgroundColor="#10202d"
        border={
          [
            "left",
          ]
        }
        borderColor="#29475c"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="row"
        gap={1}
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            fg="#8ea4b5"
          >
            /
          </span>
          <span
            fg="#8ea4b5"
          >
            search commits...
          </span>
        </text>
      </box>
      <box
        flexDirection="column"
        gap={0}
        width="100%"
      >
        <box
          backgroundColor="#243a4a"
          border={
            [
              "left",
            ]
          }
          borderColor="#9cdcfe"
          customBorderChars={
            {
              "bottomLeft": "",
              "bottomRight": "",
              "bottomT": "",
              "cross": "",
              "horizontal": " ",
              "leftT": "",
              "rightT": "",
              "topLeft": "",
              "topRight": "",
              "topT": "",
              "vertical": "┃",
            }
          }
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          paddingBottom={0}
          paddingLeft={2}
          paddingRight={1}
          paddingTop={0}
          width="100%"
        >
          <text
            fg="#8ea4b5"
            wrapMode="none"
          >
            1234567 (HEAD -&gt; feature/tui, origin/feature/tui) Revamp the list modal
          </text>
        </box>
        <box
          backgroundColor="#324d5f"
          border={
            [
              "left",
            ]
          }
          borderColor="#67b7e1"
          customBorderChars={
            {
              "bottomLeft": "",
              "bottomRight": "",
              "bottomT": "",
              "cross": "",
              "horizontal": " ",
              "leftT": "",
              "rightT": "",
              "topLeft": "",
              "topRight": "",
              "topT": "",
              "vertical": "┃",
            }
          }
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          paddingBottom={0}
          paddingLeft={2}
          paddingRight={1}
          paddingTop={0}
          width="100%"
        >
          <text
            fg="#e6edf3"
            wrapMode="none"
          >
            abcdef0 (origin/main) Polish branch categories
          </text>
        </box>
      </box>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#29475c"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <text
        fg="#e6edf3"
        wrapMode="none"
      >
        abcdef0 (origin/main) Polish branch categories
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span>
          Pierre Bot
        </span>
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           h 
        </span>
        <span>
           set head  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           b 
        </span>
        <span>
           set base  
        </span>
        <span
          fg="#29475c"
        >
          │  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           / 
        </span>
        <span>
           search  
        </span>
        <span
          bg="#152838"
          fg="#9cdcfe"
        >
           left / right / tab 
        </span>
        <span>
           switch view
        </span>
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="word"
      >
        OpenCode-style editing: ctrl+a/e line, alt/ctrl+left/right word, ctrl+w/d/k/u and ctrl+shift+d edit, ctrl+- or cmd+z undo, ctrl+. or cmd+shift+z redo.
      </text>
    </box>
  </box>
</box>
`;

exports[`renders a compact sticky file card header snapshot 1`] = `
<box
  backgroundColor="#10202d"
  border={
    [
      "left",
    ]
  }
  borderColor="#3fb950"
  customBorderChars={
    {
      "bottomLeft": "",
      "bottomRight": "",
      "bottomT": "",
      "cross": "",
      "horizontal": " ",
      "leftT": "",
      "rightT": "",
      "topLeft": "",
      "topRight": "",
      "topT": "",
      "vertical": "┃",
    }
  }
  flexDirection="column"
  gap={1}
  paddingBottom={1}
  paddingLeft={2}
  paddingRight={0}
  paddingTop={1}
  width="100%"
>
  <box
    flexDirection="column"
    width="100%"
  >
    <box
      width="100%"
    >
      <box
        flexDirection="column"
        width="100%"
      >
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            backgroundColor="#183041"
            width="100%"
          >
            <text
              fg="#d4a72c"
              wrapMode="word"
            >
              <span>
                     
              </span>
              <span
                fg="#e6edf3"
              >
                @@ -1,2 +1,3 @@
              </span>
            </text>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#3a2021"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 1
                <span
                  fg="#ff7b72"
                >
                   -
                </span>
              </text>
            </box>
            <box
              backgroundColor="#2a1718"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#ff7b72"
                >
                  const count = 0
                </span>
              </text>
            </box>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#143024"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 1
                <span
                  fg="#3fb950"
                >
                   +
                </span>
              </text>
            </box>
            <box
              backgroundColor="#0d2216"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#3fb950"
                >
                  const count = 1
                </span>
              </text>
            </box>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#0d1822"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 2
                <span
                  fg="#8ea4b5"
                >
                    
                </span>
              </text>
            </box>
            <box
              backgroundColor="#0d1822"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#e6edf3"
                >
                  console.log(count)
                </span>
              </text>
            </box>
          </box>
        </box>
      </box>
    </box>
  </box>
</box>
`;

exports[`renders a sticky file header for the active viewport file 1`] = `
<box
  backgroundColor="#10202d"
  border={
    [
      "left",
    ]
  }
  borderColor="#3fb950"
  customBorderChars={
    {
      "bottomLeft": "",
      "bottomRight": "",
      "bottomT": "",
      "cross": "",
      "horizontal": " ",
      "leftT": "",
      "rightT": "",
      "topLeft": "",
      "topRight": "",
      "topT": "",
      "vertical": "┃",
    }
  }
  flexDirection="column"
  paddingBottom={1}
  paddingLeft={2}
  paddingRight={0}
  paddingTop={1}
  width="100%"
  zIndex={10}
>
  <box
    paddingRight={1}
    width="100%"
  >
    <box
      flexDirection="row"
      gap={1}
      justifyContent="space-between"
      width="100%"
    >
      <text
        fg="#e6edf3"
        wrapMode="none"
      >
        <span
          fg="#8ea4b5"
        >
          ▼ 
        </span>
        <span
          fg="#e6edf3"
        >
          src/app.ts
        </span>
      </text>
      <box
        flexDirection="row"
        paddingRight={2}
      >
        <box
          paddingRight={1}
        >
          <text
            wrapMode="none"
          >
            <span
              bg="#9cdcfe"
              fg="#0b1b26"
            >
               CHANGED 
            </span>
            <span>
               
            </span>
            <span
              bg="#0d2634"
              fg="#3fb950"
            >
               REVIEWED 
            </span>
          </text>
        </box>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            fg="#3fb950"
          >
            +3
          </span>
          <span
            fg="#29475c"
          >
             / 
          </span>
          <span
            fg="#ff7b72"
          >
            -1
          </span>
        </text>
      </box>
    </box>
  </box>
</box>
`;

exports[`renders an expanded file card snapshot 1`] = `
<box
  backgroundColor="#152838"
  border={
    [
      "left",
    ]
  }
  borderColor="#67b7e1"
  customBorderChars={
    {
      "bottomLeft": "",
      "bottomRight": "",
      "bottomT": "",
      "cross": "",
      "horizontal": " ",
      "leftT": "",
      "rightT": "",
      "topLeft": "",
      "topRight": "",
      "topT": "",
      "vertical": "┃",
    }
  }
  flexDirection="column"
  gap={1}
  paddingBottom={1}
  paddingLeft={2}
  paddingRight={0}
  paddingTop={1}
  width="100%"
>
  <box
    flexDirection="row"
    gap={1}
    justifyContent="space-between"
    width="100%"
  >
    <text
      fg="#e6edf3"
      wrapMode="none"
    >
      <span
        fg="#8ea4b5"
      >
        ▼ 
      </span>
      <span
        fg="#9cdcfe"
      >
        src/app.ts
      </span>
    </text>
    <box
      flexDirection="row"
      paddingRight={2}
    >
      <box
        paddingRight={1}
      >
        <text
          wrapMode="none"
        >
          <span
            bg="#9cdcfe"
            fg="#0b1b26"
          >
             CHANGED 
          </span>
        </text>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span
          fg="#3fb950"
        >
          +3
        </span>
        <span
          fg="#29475c"
        >
           / 
        </span>
        <span
          fg="#ff7b72"
        >
          -1
        </span>
      </text>
    </box>
  </box>
  <box
    flexDirection="column"
    width="100%"
  >
    <box
      width="100%"
    >
      <box
        flexDirection="column"
        width="100%"
      >
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            backgroundColor="#183041"
            width="100%"
          >
            <text
              fg="#d4a72c"
              wrapMode="word"
            >
              <span>
                     
              </span>
              <span
                fg="#e6edf3"
              >
                @@ -1,2 +1,3 @@
              </span>
            </text>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#3a2021"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 1
                <span
                  fg="#ff7b72"
                >
                   -
                </span>
              </text>
            </box>
            <box
              backgroundColor="#2a1718"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#ff7b72"
                >
                  const count = 0
                </span>
              </text>
            </box>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#143024"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 1
                <span
                  fg="#3fb950"
                >
                   +
                </span>
              </text>
            </box>
            <box
              backgroundColor="#0d2216"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#3fb950"
                >
                  const count = 1
                </span>
              </text>
            </box>
          </box>
        </box>
        <box
          flexDirection="column"
          width="100%"
        >
          <box
            flexDirection="row"
            width="100%"
          >
            <box
              backgroundColor="#0d1822"
              width={5}
            >
              <text
                fg="#8ea4b5"
                wrapMode="none"
              >
                 2
                <span
                  fg="#8ea4b5"
                >
                    
                </span>
              </text>
            </box>
            <box
              backgroundColor="#0d1822"
              flexGrow={1}
            >
              <text
                fg="#e6edf3"
                wrapMode="word"
              >
                <span
                  fg="#e6edf3"
                >
                  console.log(count)
                </span>
              </text>
            </box>
          </box>
        </box>
      </box>
    </box>
  </box>
</box>
`;
